--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="icon" href="/my-app/public/logo512.png" />
-  <link rel="stylesheet" href="/my-app/public/estilo.css">
+  <link rel="stylesheet" href="/estilo.css">
   <link rel="manifest" href="/my-app/public/manifest.json" />
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,8 +26,8 @@
       <div class="container">
         <nav class="navigation">
           <ul>
-            <li><a href="/my-app/public/home.html">Home</a></li>
-            <li><a href="/my-app/public/index.html">Cadastro</a></li>
+            <li><a href="/home.html">Home</a></li>
+            <li><a href="/index.html" class="selec">Cadastro</a></li>
           </ul>
           <div class="logo">
             <span class="border-height"></span>
@@ -40,75 +40,79 @@
       <h2>Dados do cliente</h2>
       <div class="formulario">
         <label for="seuNome">Seu Nome
-          <input type="name" name="seuNome" class="input-main" placeholder="Seu Nome"></label>
+          <input type="name" name="seuNome" class="input-main" placeholder="Seu Nome" required></label>
         <label for="nomeDoPai">Nome do Pai
-          <input type="name" name="nomeDoPai" class="input-main" placeholder="Nome do Pai"></label>
+          <input type="name" name="nomeDoPai" class="input-main" placeholder="Nome do Pai"required></label>
         <label for="nomeDaMae">Nome da Mãe
-          <input type="name" name="nomeDaMae" class="input-main" placeholder="Nome da Mãe"></label>
+          <input type="name" name="nomeDaMae" class="input-main" placeholder="Nome da Mãe" required></label>
       </div>
       <div class="formulario">
         <label for="">Data de nascimento
-          <input type="date" name="data de nascimento" class="input-data"></label>
+          <input type="date" name="data de nascimento" class="input-data" required></label>
+          <br>
+          <div class="botoes">
+            <button type="reset">voltar</button>
+            <button type="submit">confirmar</button>
+          </div>
       </div>
-      <div class="botoes">
-        <button type="reset">voltar</button>
-        <button type="submit">confirmar</button>
-      </div>
+     
     </section>
     <section class="container content-white">
       <main class="table">
-        <div>
+        <div class="tabela-cadastrados">
           <label>Lista de cadastrados</label>
-          <table class="content-table">
-            <tr class="filter">
-              <td>Nome</td>
-              <td>Nome do pai</td>
-              <td>Nome da mãe</td>
-              <td>Data de nascimento</td>
-            </tr>
-            <tr class="item">
-              <td>Lucas Lima</td>
-              <td>Pedro Henrique</td>
-              <td>Maria cecilia</td>
-              <td>20/01/2004</td>
-            </tr>
-            <tr class="item">
-              <td>Lucas Lima</td>
-              <td>Pedro Henrique</td>
-              <td>Maria cecilia</td>
-              <td>20/01/2004</td>
-            </tr>
-            <tr class="item">
-              <td>Lucas Lima</td>
-              <td>Pedro Henrique</td>
-              <td>Maria cecilia</td>
-              <td>20/01/2004</td>
-            </tr>
-            <tr class="item">
-              <td>Lucas Lima</td>
-              <td>Pedro Henrique</td>
-              <td>Maria cecilia</td>
-              <td>20/01/2004</td>
-            </tr>
-            <tr class="item">
-              <td>Lucas Lima</td>
-              <td>Pedro Henrique</td>
-              <td>Maria cecilia</td>
-              <td>20/01/2004</td>
-            </tr>
-            <tr class="item">
-              <td>Lucas Lima</td>
-              <td>Pedro Henrique</td>
-              <td>Maria cecilia</td>
-              <td>20/01/2004</td>
-            </tr>
-            <tr class="item">
-              <td>Lucas Lima</td>
-              <td>Pedro Henrique</td>
-              <td>Maria cecilia</td>
-              <td>20/01/2004</td>
-            </tr>
-          </table>
+          <div>
+            <table class="content-table">
+              <tr class="filter">
+                <td>Nome</td>
+                <td>Nome do pai</td>
+                <td>Nome da mãe</td>
+                <td>Data de nascimento</td>
+              </tr>
+              <tr class="item">
+                <td>Lucas Lima</td>
+                <td>Pedro Henrique</td>
+                <td>Maria cecilia</td>
+                <td>20/01/2004</td>
+              </tr>
+              <tr class="item">
+                <td>Lucas Lima</td>
+                <td>Pedro Henrique</td>
+                <td>Maria cecilia</td>
+                <td>20/01/2004</td>
+              </tr>
+              <tr class="item">
+                <td>Lucas Lima</td>
+                <td>Pedro Henrique</td>
+                <td>Maria cecilia</td>
+                <td>20/01/2004</td>
+              </tr>
+              <tr class="item">
+                <td>Lucas Lima</td>
+                <td>Pedro Henrique</td>
+                <td>Maria cecilia</td>
+                <td>20/01/2004</td>
+              </tr>
+              <tr class="item">
+                <td>Lucas Lima</td>
+                <td>Pedro Henrique</td>
+                <td>Maria cecilia</td>
+                <td>20/01/2004</td>
+              </tr>
+              <tr class="item">
+                <td>Lucas Lima</td>
+                <td>Pedro Henrique</td>
+                <td>Maria cecilia</td>
+                <td>20/01/2004</td>
+              </tr>
+              <tr class="item">
+                <td>Lucas Lima</td>
+                <td>Pedro Henrique</td>
+                <td>Maria cecilia</td>
+                <td>20/01/2004</td>
+              </tr>
+            </table>
+          </div>
         </div>
       </main>
     </section>
