--- a/index.html
+++ b/index.html
@@ -39,23 +39,23 @@
     <section class="container content-white">
       <h2>Dados do cliente</h2>
       <div class="formulario">
-        <label for="seuNome">Seu Nome
+        <label for="seuNome" class="label">Seu Nome
           <input type="name" name="seuNome" class="input-main" placeholder="Seu Nome" required></label>
-        <label for="nomeDoPai">Nome do Pai
-          <input type="name" name="nomeDoPai" class="input-main" placeholder="Nome do Pai"required></label>
-        <label for="nomeDaMae">Nome da Mãe
+        <label for="nomeDoPai" class="label">Nome do Pai
+          <input type="name" name="nomeDoPai" class="input-main" placeholder="Nome do Pai" required></label>
+        <label for="nomeDaMae" class="label">Nome da Mãe
           <input type="name" name="nomeDaMae" class="input-main" placeholder="Nome da Mãe" required></label>
       </div>
       <div class="formulario">
-        <label for="">Data de nascimento
+        <label for="" class="label" style="margin-top: 35px;">Data de nascimento
           <input type="date" name="data de nascimento" class="input-data" required></label>
-          <br>
-          <div class="botoes">
-            <button type="reset">voltar</button>
-            <button type="submit">confirmar</button>
-          </div>
+        <br>
+        <div class="botao1">
+          <button type="reset" >voltar</button>
+          <button type="submit" >confirmar</button>
+        </div>
       </div>
-     
+
     </section>
     <section class="container content-white">
       <main class="table">
