reorganizando o cdg e add footer nas duas paginas

--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
                 <p>No SysAdmin você cadastra os usuários da sua empresa
                     de forma segura e rápida.</p>
             </div>
-            <div class="botoes">
+            <div class="botao-cadastrar">
                 <button type="submit" class="cadastrar"><a class="cadastrar" href="/index.html">cadastrar</a></button>
             </div>
         </section>
@@ -106,7 +106,12 @@
             </main>
         </section>
     </div>
-    <footer>Copyright © 2023</footer>
+    <footer class="footer-principal">
+        <h4>CODE OPACITY</h4>
+       <p class="texto-footer">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+       amet autem sunt, perspicitiatis nemo.</p>
+      <footer class="footer-final">Copyright © 2023 SysAdmin, Design By Guilherme</footer>
+      </footer>
 </body>
 <script src="/my-app/src/App.js"></script>
 
