--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
       <h2>Dados do cliente</h2>
       <div class="formulario">
         <label for="seuNome" class="label">Seu Nome
-        <input type="name" name="seuNome" class="input-main" placeholder="Seu Nome" required></label>
+          <input type="name" name="seuNome" class="input-main" required></label>
 
 
         <label for="nomeDoPai" class="label">Nome do Pai
-        <input type="name" name="nomeDoPai" class="input-main" placeholder="Nome do Pai" required></label>
+          <input type="name" name="nomeDoPai" class="input-main" required></label>
 
 
         <label for="nomeDaMae" class="label">Nome da Mãe
 
-        <input type="name" name="nomeDaMae" class="input-main" placeholder="Nome da Mãe" required></label>
+          <input type="name" name="nomeDaMae" class="input-main" required></label>
         <label for="" class="label">Data de nascimento
-        <input type="date" name="data de nascimento" class="input-main" required></label>
+          <input type="date" name="data de nascimento" class="input-main" required></label>
         <br>
-        <!-- <div class="botao1"> -->
+        <div class="botao1">
           <button type="reset">voltar</button>
-          <!-- <button type="submit">confirmar</button> -->
+          <button type="submit">confirmar</button>
         </div>
       </div>
 
@@ -66,159 +66,70 @@
           <label>Lista de cadastrados</label>
           <div>
             <table class="content-table">
-              <tr class="filter">
-                <td>Nome</td>
-                <td>Nome do pai</td>
-                <td>Nome da mãe</td>
-                <td>Data de nascimento</td>
-              </tr>
-              <tr class="item">
-                <td>Lucas Lima</td>
-                <td>Pedro Henrique</td>
-                <td>Maria cecilia</td>
-                <td>20/01/2004</td>
-              </tr>
-              <tr class="item">
-                <td>Lucas Lima</td>
-                <td>Pedro Henrique</td>
-                <td>Maria cecilia</td>
-                <td>20/01/2004</td>
-              </tr>
-              <tr class="item">
-                <td>Lucas Lima</td>
-                <td>Pedro Henrique</td>
-                <td>Maria cecilia</td>
-                <td>20/01/2004</td>
-              </tr>
-              <tr class="item">
-                <td>Lucas Lima</td>
-                <td>Pedro Henrique</td>
-                <td>Maria cecilia</td>
-                <td>20/01/2004</td>
-              </tr>
-              <tr class="item">
-                <td>Lucas Lima</td>
-                <td>Pedro Henrique</td>
-                <td>Maria cecilia</td>
-                <td>20/01/2004</td>
-              </tr>
-              <tr class="item">
-                <td>Lucas Lima</td>
-                <td>Pedro Henrique</td>
-                <td>Maria cecilia</td>
-                <td>20/01/2004</td>
-              </tr>
-              <tr class="item">
-                <td>Lucas Lima</td>
-                <td>Pedro Henrique</td>
-                <td>Maria cecilia</td>
-                <td>20/01/2004</td>
-              </tr>
+              <tbody>
+                <tr class="filter">
+                  <td>Nome</td>
+                  <td>Nome do pai</td>
+                  <td>Nome da mãe</td>
+                  <td>Data de nascimento</td>
+                </tr>
+                <tr class="item">
+                  <td>Lucas Lima</td>
+                  <td>Pedro Henrique</td>
+                  <td>Maria cecilia</td>
+                  <td>20/01/2004</td>
+                </tr>
+                <tr class="item">
+                  <td>Lucas Lima</td>
+                  <td>Pedro Henrique</td>
+                  <td>Maria cecilia</td>
+                  <td>20/01/2004</td>
+                </tr>
+                <tr class="item">
+                  <td>Lucas Lima</td>
+                  <td>Pedro Henrique</td>
+                  <td>Maria cecilia</td>
+                  <td>20/01/2004</td>
+                </tr>
+                <tr class="item">
+                  <td>Lucas Lima</td>
+                  <td>Pedro Henrique</td>
+                  <td>Maria cecilia</td>
+                  <td>20/01/2004</td>
+                </tr>
+                <tr class="item">
+                  <td>Lucas Lima</td>
+                  <td>Pedro Henrique</td>
+                  <td>Maria cecilia</td>
+                  <td>20/01/2004</td>
+                </tr>
+                <tr class="item">
+                  <td>Lucas Lima</td>
+                  <td>Pedro Henrique</td>
+                  <td>Maria cecilia</td>
+                  <td>20/01/2004</td>
+                </tr>
+                <tr class="item">
+                  <td>Lucas Lima</td>
+                  <td>Pedro Henrique</td>
+                  <td>Maria cecilia</td>
+                  <td>20/01/2004</td>
+                </tr>
+              </tbody>
             </table>
           </div>
         </div>
       </main>
     </section>
   </div>
-  <!-- <div class="background"></div>
-  <div class="container">
-    <header>
-      <nav class="navigation">
-        <ul>
-          <li><a href="/my-app/public/home.html">Home</a></li>
-          <li><a href="/my-app/public/index.html">Cadastro</a></li>
-        </ul>
-        <div class="logo">
-          <span class="border-height"></span>
-          <h1 name="logo">Sys<span>Admin</span></h1>
-        </div>
-      </nav>
-    </header>
-    <div class="formulario">
-      <input type="name" name="seuNome" class="input-main" placeholder="Seu Nome">
-      <input type="name" name="nomeDoPai" class="input-main" placeholder="Nome do Pai">
-      <input type="name" name="nomeDoMae" class="input-main" placeholder="Nome da Mãe">
-      <input type="date" name="data de nascimento" class="input-main"> -->
-  <!-- </div>
-  <div class="formulario">
-    <input type="date" name="data de nascimento" class="input-data">
-  </div>
-  </div>  -->
-  <!-- <div class="principal">
-    <header class="painel1">
-      <div class="container">
-        <ul>
-          <a href="/my-app/public/home.html">home</a>
-          <a href="/my-app/public/index.html">cadastro</a>
-        </ul>
-        <h1 class="logo" name="logo">|SysAdmin</h1>
-      </div>
-    </header>
-    <div class="container2">
-      <div class="infor-cadastro">
-        <div class="content-cad">
-          <section class="caption">
-            <form action="/my-app/public/home.html">
-              <div class="formulario-cadastro">
-                <div>
-                  <caption><b>seu nome</b></caption>
-                  <input type="name" name="nome1" class="seu_nome" id="nome1" placeholder="digite seu nome" required>
-                </div>
-                <div>
-                  <caption><b class="b">nome do pai</b></caption>
-                  <input type="name" name="nomeDoPai" class="nome_do_pai" id="nomePai" placeholder="nome do pai">
-                </div>
-                <div>
-                  <caption><b class="b">nome da mãe</b></caption>
-                  <input type="name" name="nomeDaMae" class="nome_da_mae" id="nomeMae" placeholder="nome da mãe">
-                </div>
-                <div>
-                  <caption><b class="b">data de nascimento</b></caption>
-                  <input type="date" name="data" class="data_nascimento" id="data">
-                </div>
-              </div>
-              <button>voltar</button>
-              <button type="submit" li class="btn-grad" onclick="">confirmar</button>
-            </form>
-
-          </section>
-        </div>
-      </div>
-    </div>
-    <br>
-    <section>
-
-      <main class="tabela">
-        <div>
-          <caption><b>Lista de cadastrados</b></caption>
-          <table class="caixa">
-            <tr>
-              <td>Nome</td>
-              <td>Nome do pai</td>
-              <td>Nome da mãe</td>
-              <td>Data de nascimento</td>
-            </tr>
-            <tr>
-              <td>Lucas Lima</td>
-              <td>Pedro Henrique</td>
-              <td>Maria cecilia</td>
-              <td>20/01/2004</td>
-            </tr>
-          </table>
-        </div>
-      </main>
-    </section>
-  </div>
-  <section class="container-back">
-    <div class="background"></div>
-  </section>
-  <div id="root"></div> -->
-  <!-- <footer>Copyright © 2023</footer> -->
-
-
 </body>
-<script src="/my-app/public/site react.jsx"></script>
-<footer>Copyright</footer>
+<script src="/src/main.jsx"></script>
+<footer class="footer-principal">
+  <h4>CODE OPACITY</h4>
+  <p class="texto-footer">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+    amet autem sunt, perspicitiatis nemo.</p>
+  <footer class="footer-final">Copyright © 2023 SysAdmin, Design By Guilherme</footer>
+</footer>
 
 </html>
 
