--- a/home.html
+++ b/home.html
@@ -52,54 +52,56 @@
                     <label>Lista de cadastrados</label>
                     <div>
                         <table class="content-table">
-                            <tr class="filter">
-                                <td>Nome</td>
-                                <td>Nome do pai</td>
-                                <td>Nome da mãe</td>
-                                <td>Data de nascimento</td>
-                            </tr>
-                            <tr class="item">
-                                <td>Lucas Lima</td>
-                                <td>Pedro Henrique</td>
-                                <td>Maria cecilia</td>
-                                <td>20/01/2004</td>
-                            </tr>
-                            <tr class="item">
-                                <td>Lucas Lima</td>
-                                <td>Pedro Henrique</td>
-                                <td>Maria cecilia</td>
-                                <td>20/01/2004</td>
-                            </tr>
-                            <tr class="item">
-                                <td>Lucas Lima</td>
-                                <td>Pedro Henrique</td>
-                                <td>Maria cecilia</td>
-                                <td>20/01/2004</td>
-                            </tr>
-                            <tr class="item">
-                                <td>Lucas Lima</td>
-                                <td>Pedro Henrique</td>
-                                <td>Maria cecilia</td>
-                                <td>20/01/2004</td>
-                            </tr>
-                            <tr class="item">
-                                <td>Lucas Lima</td>
-                                <td>Pedro Henrique</td>
-                                <td>Maria cecilia</td>
-                                <td>20/01/2004</td>
-                            </tr>
-                            <tr class="item">
-                                <td>Lucas Lima</td>
-                                <td>Pedro Henrique</td>
-                                <td>Maria cecilia</td>
-                                <td>20/01/2004</td>
-                            </tr>
-                            <tr class="item">
-                                <td>Lucas Lima</td>
-                                <td>Pedro Henrique</td>
-                                <td>Maria cecilia</td>
-                                <td>20/01/2004</td>
-                            </tr>
+                            <tbody>
+                                <tr class="filter">
+                                    <td style="margin-right: 10px;">Nome</td>
+                                    <td>Nome do pai</td>
+                                    <td>Nome da mãe</td>
+                                    <td style="margin-left: -30px;">Data de nascimento</td>
+                                </tr>
+                                <tr class="item">
+                                    <td>Lucas Lima</td>
+                                    <td>Pedro Henrique</td>
+                                    <td>Maria cecilia</td>
+                                    <td>20/01/2004</td>
+                                </tr>
+                                <tr class="item">
+                                    <td>Lucas Lima</td>
+                                    <td>Pedro Henrique</td>
+                                    <td>Maria cecilia</td>
+                                    <td>20/01/2004</td>
+                                </tr>
+                                <tr class="item">
+                                    <td>Lucas Lima</td>
+                                    <td>Pedro Henrique</td>
+                                    <td>Maria cecilia</td>
+                                    <td>20/01/2004</td>
+                                </tr>
+                                <tr class="item">
+                                    <td>Lucas Lima</td>
+                                    <td>Pedro Henrique</td>
+                                    <td>Maria cecilia</td>
+                                    <td>20/01/2004</td>
+                                </tr>
+                                <tr class="item">
+                                    <td>Lucas Lima</td>
+                                    <td>Pedro Henrique</td>
+                                    <td>Maria cecilia</td>
+                                    <td>20/01/2004</td>
+                                </tr>
+                                <tr class="item">
+                                    <td>Lucas Lima</td>
+                                    <td>Pedro Henrique</td>
+                                    <td>Maria cecilia</td>
+                                    <td>20/01/2004</td>
+                                </tr>
+                                <tr class="item">
+                                    <td>Lucas Lima</td>
+                                    <td>Pedro Henrique</td>
+                                    <td>Maria cecilia</td>
+                                    <td>20/01/2004</td>
+                                </tr>
+                            </tbody>
                         </table>
                     </div>
                 </div>
@@ -108,10 +110,10 @@
     </div>
     <footer class="footer-principal">
         <h4>CODE OPACITY</h4>
-       <p class="texto-footer">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-       amet autem sunt, perspicitiatis nemo.</p>
-      <footer class="footer-final">Copyright © 2023 SysAdmin, Design By Guilherme</footer>
-      </footer>
+        <p class="texto-footer">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            amet autem sunt, perspicitiatis nemo.</p>
+        <footer class="footer-final">Copyright © 2023 SysAdmin, Design By Guilherme</footer>
+    </footer>
 </body>
 <script src="/my-app/src/App.js"></script>
 
