--- a/home.html
+++ b/home.html
@@ -106,6 +106,9 @@
                     </div>
                 </div>
             </main>
+            <div>
+                <p style="color:#FFF" class="invisivel">obrigado pela atenção, qualque modificação favor, alertar no telegram</p>
+            </div>
         </section>
     </div>
     <footer class="footer-principal">
