--- a/home.html
+++ b/home.html
@@ -54,10 +54,11 @@
                         <table class="content-table">
                             <tbody>
                                 <tr class="filter">
-                                    <td style="margin-right: 10px;">Nome</td>
+                                    <td>Nome</td>
                                     <td>Nome do pai</td>
                                     <td>Nome da mãe</td>
-                                    <td style="margin-left: -30px;">Data de nascimento</td>
+                                    <td>Data de nascimento</td>
+
                                 </tr>
                                 <tr class="item">
                                     <td>Lucas Lima</td>
@@ -107,7 +108,6 @@
                 </div>
             </main>
             <div>
-                <p style="color:#FFF" class="invisivel">obrigado pela atenção, qualque modificação favor, alertar no telegram</p>
             </div>
         </section>
     </div>
