--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
             <table class="content-table">
               <tbody>
                 <tr class="filter">
-                  <td style="margin-right: 10px;">Nome</td>
+                  <td>Nome</td>
                   <td>Nome do pai</td>
                   <td>Nome da mãe</td>
-                  <td style="margin-left: -30px;">Data de nascimento</td>
-                </tr>
+                  <td>Data de nascimento</td>
+              </tr>
                 <tr class="item">
                   <td>Lucas Lima</td>
                   <td>Pedro Henrique</td>
