corrigindo tabela de cadastrados

--- a/home.html
+++ b/home.html
@@ -49,16 +49,16 @@
         <section class="container content-white">
             <main class="table">
                 <div class="tabela-cadastrados">
+                    <heading></heading>
                     <label>Lista de cadastrados</label>
                     <div>
                         <table class="content-table">
                             <tbody>
                                 <tr class="filter">
-                                    <td>Nome</td>
-                                    <td>Nome do pai</td>
-                                    <td>Nome da mãe</td>
-                                    <td>Data de nascimento</td>
-
+                                    <th>Nome</th>
+                                    <th>Nome do pai</th>
+                                    <th>Nome da mãe</th>
+                                    <th>Data de nascimento</th>
                                 </tr>
                                 <tr class="item">
                                     <td>Lucas Lima</td>
