--- a/index.html
+++ b/index.html
@@ -60,19 +60,22 @@
       </div>
 
     </section>
+
     <section class="container content-white">
       <main class="table">
         <div class="tabela-cadastrados">
-          <label>Lista de cadastrados</label>
+          <h2>Lista de cadastrados</h2>
           <div>
             <table class="content-table">
-              <tbody>
+              <thead>
                 <tr class="filter">
                   <td>Nome</td>
                   <td>Nome do pai</td>
                   <td>Nome da mãe</td>
                   <td>Data de nascimento</td>
-              </tr>
+                </tr>
+              </thead>
+              <tbody>
                 <tr class="item">
                   <td>Lucas Lima</td>
                   <td>Pedro Henrique</td>
