tabela no modo mobile

--- a/home.html
+++ b/home.html
@@ -46,20 +46,22 @@
                 <button type="submit" class="cadastrar"><a class="cadastrar" href="/index.html">cadastrar</a></button>
             </div>
         </section>
+
         <section class="container content-white">
             <main class="table">
                 <div class="tabela-cadastrados">
-                    <heading></heading>
-                    <label>Lista de cadastrados</label>
-                    <div>
+                    <h2>Lista de cadastrados</h2>
+                    <div class="largura">
                         <table class="content-table">
-                            <tbody>
+                            <thead>
                                 <tr class="filter">
-                                    <th>Nome</th>
-                                    <th>Nome do pai</th>
-                                    <th>Nome da mãe</th>
-                                    <th>Data de nascimento</th>
+                                    <td>Nome</td>
+                                    <td>Nome do pai</td>
+                                    <td>Nome da mãe</td>
+                                    <td>Data de nascimento</td>
                                 </tr>
+                            </thead>
+                            <tbody>
                                 <tr class="item">
                                     <td>Lucas Lima</td>
                                     <td>Pedro Henrique</td>
@@ -107,8 +109,6 @@
                     </div>
                 </div>
             </main>
-            <div>
-            </div>
         </section>
     </div>
     <footer class="footer-principal">
