--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <main class="table">
         <div class="tabela-cadastrados">
           <h2>Lista de cadastrados</h2>
-          <div>
+          <div class="largura">
             <table class="content-table">
               <thead>
                 <tr class="filter">
