--- a/home.html
+++ b/home.html
@@ -118,6 +118,6 @@
         <footer class="footer-final">Copyright © 2023 SysAdmin, Design By Guilherme</footer>
     </footer>
 </body>
-<script src="/my-app/src/App.js"></script>
+<script src=""></script>
 
 </html>
