organização de arquivos e pastas

--- a/sysadmin.main/home.html
+++ b/sysadmin.main/home.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="icon" href="/my-app/public/logo512.png" />
-    <link rel="stylesheet" href="/estilo.css">
+    <link rel="stylesheet" href="/sysadmin.main/estilo.css">
     <link rel="manifest" href="/my-app/public/manifest.json" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,8 +26,8 @@
             <div class="container">
                 <nav class="navigation">
                     <ul>
-                        <li><a href="/home.html" class="selec">Home</a></li>
-                        <li><a href="/index.html">Cadastro</a></li>
+                        <li><a href="/sysadmin.main/home.html" class="selec">Home</a></li>
+                        <li><a href="/sysadmin.main/index.html">Cadastro</a></li>
                     </ul>
                     <div class="logo">
                         <span class="border-height"></span>
@@ -43,7 +43,8 @@
                     de forma segura e rápida.</p>
             </div>
             <div class="botao-cadastrar">
-                <button type="submit" class="cadastrar"><a class="cadastrar" href="/index.html">cadastrar</a></button>
+                <button type="submit" class="cadastrar"><a class="cadastrar"
+                        href="/sysadmin.main/index.html">cadastrar</a></button>
             </div>
         </section>
 
