--- a/sysadmin.main/index.html
+++ b/sysadmin.main/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="icon" href="/my-app/public/logo512.png" />
-  <link rel="stylesheet" href="/estilo.css">
+  <link rel="stylesheet" href="/sysadmin.main/estilo.css">
   <link rel="manifest" href="/my-app/public/manifest.json" />
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,8 +26,8 @@
       <div class="container">
         <nav class="navigation">
           <ul>
-            <li><a href="/home.html">Home</a></li>
-            <li><a href="/index.html" class="selec">Cadastro</a></li>
+            <li><a href="/sysadmin.main/home.html">Home</a></li>
+            <li><a href="/sysadmin.main/index.html" class="selec">Cadastro</a></li>
           </ul>
           <div class="logo">
             <span class="border-height"></span>
